bridge/base/0-springbootdemo-namespace.yaml
#! 0-springbootdemo-namespace.yaml
# Generated code, do not edit
apiVersion: v1
kind: Namespace
metadata:
    name: springbootdemo
    labels:
        com.docker.compose.project: springbootdemo
