bridge/base/db-service.yaml
# check if there is at least one published port

#! db-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: db-published
    namespace: springbootdemo
    labels:
        com.docker.compose.project: springbootdemo
        com.docker.compose.service: db
spec:
    selector:
        com.docker.compose.project: springbootdemo
        com.docker.compose.service: db
    ports:
        - name: db-5332
          port: 5332
          protocol: TCP
          targetPort: db-5432
